fixed: overflow-y fixed on task-list

--- a/js_dom/miniproject_5/styles.css
+++ b/js_dom/miniproject_5/styles.css
@@ -50,6 +50,8 @@ body {
 }
 
 .task-list{
+    overflow-y: scroll;
+    max-height: 400px;
     width: 100%;    
 }
 
